[project]
name = "tgcf"
version = "1.1.8"
description = "The ultimate tool to automate custom telegram message forwarding."
authors = [{ name = "aahnik", email = "daw@aahnik.dev" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.28.1,<3",
    "typer>=0.7.0,<0.8",
    "python-dotenv>=0.21.0,<0.22",
    "pydantic>=1.10.2,<2",
    "Telethon==1.26.0",
    "cryptg>=0.4.0,<0.5",
    "Pillow>=9.3,<11.0",
    "hachoir>=3.1.3,<4",
    "aiohttp>=3.8.3,<4",
    "tg-login>=0.0.4,<0.0.5",
    "watermark.py>=0.0.3,<0.0.4",
    "pytesseract>=0.3.7,<0.4",
    "rich>=12.6.0,<13",
    "verlat>=0.1.0,<0.2",
    "streamlit==1.17.0",
    "PyYAML~=6.0",
    "pymongo>=4.3.3,<5",
    "altair<5",
    "multidict>=6.1.0",
]

[project.urls]
Repository = "https://github.com/aahnik/tgcf"
Documentation = "https://github.com/aahnik/tgcf/wiki"

[project.scripts]
tgcf = "tgcf.cli:app"
tgcf-web = "tgcf.web_ui.run:main"

[dependency-groups]
dev = [
    "black>=22.10.0,<23",
    "isort>=5.10.1,<6",
    "pre-commit>=2.20.0,<3",
    "ipykernel>=6.17.0,<7",
    "pylint>=2.15.8,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
